# plugin.service.catsubs

./: README.md  addon.xml  pyproject.toml
resources/: settings.xml
resources/language/English/: strings.po
resources/lib/: script.py  service.py
resources/lib/modules/: constants.py  global_filters.py  logger.py  monitor.py  player.py  router.py  subtitle_handler.py
resources/lib/modules/gui_components/: custom_list.py  multiselect.py  notification.py
resources/lib/modules/routes/: exclude_audio_languages.py  exclude_subtitle_languages.py  exclude_words.py
resources/lib/modules/subtitle_providers/: __init__.py  auth_decorator.py  i_provider.py  open_subtitles_com.py
