[project]
name = "plugin-service-catsubs"
version = "0.1.0"
authors = [
    { name = "Florence Wolfe", email = "florencewolfe@pm.me" }
]
dependencies = [
    "httpx>=0.27.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
dev-dependencies = [
    "kodistubs>=21.0.0",
    "ruff>=0.4.3",
    "mypy>=1.10.0",
]

[tool.mypy]
mypy_path = "resources/lib"
check_untyped_defs = true
ignore_missing_imports = true
